--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -4,9 +4,13 @@
 
 {% block body %}
 
-<h1 class="teste">home</h1>
+{% for dados in dados%}
+{{dados['name']}} | {{dados['id_user_type']}} | {{dados['email']}}<br>
+{% endfor %}
 
-<button class="btn btn-danger">teste</button>
+<button style="margin-left: 30px; " class="btn btn-danger">teste botao</button>
+
+
 
 {% endblock %}
 
