--- a/templates/master_layout/defaut.html
+++ b/templates/master_layout/defaut.html
@@ -9,11 +9,52 @@
     
     <link rel="stylesheet" href="../../static/css/bootstrap.min.css">
     <link rel="stylesheet" href="../home/home.css">
+    <link rel="stylesheet" href="../../static/css/navbar.css">
 </head>
 <body>
-
+    <header  class="sticky-top jss5">
+        <nav class="navbar navbar-expand-lg w-100 mx-auto d-flex align-items-center justify-content-between"
+            style="background-color:white;font-size:20px; border-bottom: 1px solid #d8d8d8;">
+            <div class="container-fluid  container-lista">
+              <!-- <a  href="/home">
+                  <img class="img-logo " src="../../static/img/keyrus-teamportal.svg">
+              </a>
+           -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="nav-lista collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <ul class="navbar-nav" style="color:black;">              
+      
+                      <li class="nav-item nav-route" >
+                          <a class="nav-link" href="/home"><p > Home</p></a>
+                      </li>
+      
+                      <li class="nav-item nav-route" >
+                      <a class="nav-link" href="/contratarservicos"><p > Contratar Serviços</p></a>
+                      </li>
+      
+      
     
-    {% block body %}{% endblock %}
+      
+                      <li class="nav-item nav-route" style="margin-left: 60px; " >
+                          <div class="botao-logout " >
+                              <form >
+                                  <button class="btn-hover-logout"  type="submit"><b style="color: white;">LOGOUT</b></button>  
+                              </form>  
+                          </div>
+                      </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+      </header>
+    <div style="padding-top: 120px;">
+    {% block body %}{% endblock%}            
+    </div>
+
 
 <script src="../../static/script/bootstrap.min.js"></script>
 {% block script %}{% endblock %}
