Adicionado estilização pagina gome

--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -48,14 +48,14 @@ margin-right: 20px;
 }
 
 .nav-item a:hover{
-    color:#23c7ff;
+    color:#B2DFEE;
     text-decoration: underline solid;
     text-underline-offset: 10px;
     text-decoration-thickness: 5px;
 }
 
 .nav-item a:hover{
-    color:#23c7ff;
+    color:#B2DFEE;
     text-decoration: underline solid;
     text-underline-offset: 10px;
     text-decoration-thickness: 5px;
