--- a/templates/contratar_servicos/contratar_servicos.html
+++ b/templates/contratar_servicos/contratar_servicos.html
@@ -1,1 +1,5 @@
-<h4>{{servicos}}</h4>
+{% extends './master_layout/defaut.html' %}
+
+{% block body%}
+<h4 style="margin-top:150px;">{{servicos}}</h4>
+{% endblock %}
