--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,15 +1,68 @@
 {% extends './master_layout/defaut.html' %}
-
-
-
+<!-- <link rel="stylesheet" href="../../static/css/home.css"> -->
 {% block body %}
 
-{% for dados in dados%}
-{{dados['name']}} | {{dados['id_user_type']}} | {{dados['email']}}<br>
-{% endfor %}
+<!-- <div class="circle-home">        <img class="img-work" src="../../static/img/home-img.jpg" alt="">    
+</div> -->
 
+
+<div class="container corpo">
+    <div class="img-home">
+        <img class="img-work" src="../../static/img/home-img.jpg" alt="">    
+    </div>
+
+
+    <h1>LarDoceLar</h1>
+    <h5>Sua satisfação é garantida</h5>
+
+    <p>Bem vindo à LarDoceLar.</p>
+
+    <p>
+        Com mais de cinco anos higienizando resid&ecirc;ncias
+        da &aacute;rea metropolitana da cidade de S&atilde;o
+        Paulo, a LarDoceLar estabeleceu uma
+        reputa&ccedil;&atilde;o de servi&ccedil;os de excelente
+        qualidade e pre&ccedil;os acess&iacute;veis.
+    </p>
+
+    <p>
+        Nossos servi&ccedil;os come&ccedil;am com um
+        or&ccedil;amento para entender suas necessidades
+        espec&iacute;ficas. Assim que finalizar o primeiro passo,
+        iniciaremos o agendamento do servi&ccedil;o de limpeza e
+        registraremos suas instru&ccedil;&otilde;es especiais.
+        Uma equipe qualificada chegar&aacute; &agrave; sua casa
+        com uma c&oacute;pia dessas instru&ccedil;&otilde;es,
+        juntamente com todos os produtos e equipamentos
+        necess&aacute;rios para fazer seu lar brilhar.
+    </p>
+    <div class=" img-home-2">
+        <img class="img-work" src="../../static/img/home-img.jpg" alt="">    
+    </div>
+    <p>
+        Nosso trabalho promissor de excel&ecirc;ncia
+        come&ccedil;a com profissionais cuidadosamente
+        selecionados e treinados, que tem o compromisso de
+        fornecer a voc&ecirc; um servi&ccedil;o de limpeza
+        excepcional. Nossa ampla experi&ecirc;ncia garante que
+        nossas equipes usem as t&eacute;cnicas mais eficazes
+        para cada trabalho de limpeza em sua casa. Cada uma
+        delas tem um L&iacute;der que &eacute;
+        respons&aacute;vel por verificar se todas as
+        &aacute;reas limpas da sua casa est&atilde;o
+        correctamente acabadas. Todas as equipes trabalham sob
+        um sistema de supervis&atilde;o que consiste em
+        verifica&ccedil;&otilde;es de qualidade
+        aleat&oacute;rias no local e comunica&ccedil;&atilde;o
+        constante com a gest&atilde;o. Encorajamos o feedback do
+        cliente e trabalharemos com voc&ecirc; para encontrar
+        maneiras de tornar seu lar mais aconchegante e
+        not&aacute;vel.
+    </p>
+
+    <p style="text-align: center;">Para mais informações entre em <a href="">Contato</a></p>
+
+</div>
 
 {% endblock %}
-
-{% block script %}{% endblock %}
 
