--- a/templates/master_layout/defaut.html
+++ b/templates/master_layout/defaut.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <!-- BOOTSTRAP CSS CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+    <!-- FONT-AWESOME ICONS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!--BOOTSTRAP ICONS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     
-    <link rel="stylesheet" href="../../static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../home/home.css">
+    <!-- <link rel="stylesheet" href="../../static/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="../../static/css/default.css">
     <link rel="stylesheet" href="../../static/css/navbar.css">
+    <link rel="stylesheet" href="../../static/css/home.css">
 </head>
 <body>
     <header  class="sticky-top jss5">
@@ -28,13 +37,21 @@
                 <div class="nav-lista collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav" style="color:black;">              
       
-                      <li class="nav-item nav-route" >
-                          <a class="nav-link" href="/home"><p > Home</p></a>
-                      </li>
+                        <li class="nav-item nav-route" >
+                            <a class="nav-link" href="/home"><p > Home</p></a>
+                        </li>
       
-                      <li class="nav-item nav-route" >
-                      <a class="nav-link" href="/contratarservicos"><p > Contratar Serviços</p></a>
-                      </li>
+                        <li class="nav-item nav-route" >
+                                <a class="nav-link" href="/contratarservicos"><p > Serviços</p></a>
+                        </li>
+                            
+                        <li class="nav-item nav-route" >
+                            <a class="nav-link" href="/contratarservicos"><p > Sobre nós</p></a>
+                        </li>
+
+                        <li class="nav-item nav-route" >
+                            <a class="nav-link" href="/contratarservicos"><p > Contato</p></a>
+                        </li>
       
       
     
@@ -51,12 +68,19 @@
             </div>
         </nav>
       </header>
-    <div style="padding-top: 120px;">
+    <div class="content-default" style="padding-top: 120px;">
     {% block body %}{% endblock%}            
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
-<script src="../../static/script/bootstrap.min.js"></script>
+                      
+    <!----------------------------------- BOOTSTRAP/JQUERY ----------------------------------->
+    <!-- <script src="../static/script/bootstrap.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>      
+<!-- <script src="../../static/script/bootstrap.min.js"></script> -->
 {% block script %}{% endblock %}
 </body>
 </html>
