--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -15,6 +15,7 @@
     <h1>LarDoceLar</h1>
     <h5>Sua satisfação é garantida</h5>
 
+    <p class="indication-page"><u>Home</u></p>
     <p>Bem vindo à LarDoceLar.</p>
 
     <p>
