--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,3 +1,5 @@
+
+
 .corpo{
     padding-top: 20px;
     padding-bottom: 20px;
@@ -7,6 +9,7 @@
     min-height: 650px;
     height: auto;
     margin-top: 80px;
+    margin-bottom: 80px;
 
 }
 
