adicionado titulo a pagina serviços

--- a/templates/contratar_servicos/contratar_servicos.html
+++ b/templates/contratar_servicos/contratar_servicos.html
@@ -3,6 +3,14 @@
 {% block body%}
 
 <div class="container corpo">
+  <!-- <h1>LarDoceLar</h1>
+  <h5>Sua satisfação é garantida</h5> -->
+
+  <p class="indication-page"><u>Serviços</u></p>
+  <p>
+    Aqui você encontra todas as informações dos nosso parceiros.<br>
+    Procure pelo serviço desejado e caso goste do perfil, entre em contato já!
+  </p>
 <div class="table-responsive tabela-contatos">
     <table class="table">
         <thead>
