--- a/templates/master_layout/defaut.html
+++ b/templates/master_layout/defaut.html
@@ -52,6 +52,10 @@
                         <li class="nav-item nav-route" >
                             <a class="nav-link" href="/contratarservicos"><p > Contato</p></a>
                         </li>
+
+                        <li class="nav-item nav-route" >
+                            <a class="nav-link" href="/contratarservicos"><p > Seja um parceiro</p></a>
+                        </li>
       
       
     
