--- a/templates/master_layout/defaut.html
+++ b/templates/master_layout/defaut.html
@@ -57,16 +57,13 @@
                             <a class="nav-link" href="/contratarservicos"><p > Seja um parceiro</p></a>
                         </li>
       
-      
-    
-      
-                      <li class="nav-item nav-route" style="margin-left: 60px; " >
+                      <!-- <li class="nav-item nav-route" style="margin-left: 60px; " >
                           <div class="botao-logout " >
                               <form >
                                   <button class="btn-hover-logout"  type="submit"><b style="color: white;">LOGOUT</b></button>  
                               </form>  
                           </div>
-                      </li>
+                      </li> -->
                     </ul>
                 </div>
             </div>
