--- a/templates/contratar_servicos/contratar_servicos.html
+++ b/templates/contratar_servicos/contratar_servicos.html
@@ -18,7 +18,7 @@
               <th scope="col">Nome</th>
               <th scope="col">Tipo de Serviço</th>
               <th scope="col">Atividades</th>
-              <th scope="col">Valor Hora</th>
+              <th scope="col">Valor Hora R$</th>
               <th scope="col">Contato</th>
             </tr>
         </thead>
