--- a/templates/contratar_servicos/contratar_servicos.html
+++ b/templates/contratar_servicos/contratar_servicos.html
@@ -1,13 +1,16 @@
 {% extends './master_layout/defaut.html' %}
 
 {% block body%}
+<div>
+ <h1 style="color: white; text-align: center;"> Olá, procure aqui os servicos que deseja.</h1>
+</div>
 
 <div class="container corpo">
   <!-- <h1>LarDoceLar</h1>
   <h5>Sua satisfação é garantida</h5> -->
 
-  <p class="indication-page"><u>Serviços</u></p>
-  <p>
+  <p  style="font-size: 30px;" id="text-servicos"class="indication-page"><u>Serviços</u></p>
+  <p id="text-servicos">
     Aqui você encontra todas as informações dos nosso parceiros.<br>
     Procure pelo serviço desejado e caso goste do perfil, entre em contato já!
   </p>
