--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -15,10 +15,10 @@
     <h1>LarDoceLar</h1>
     <h5>Sua satisfação é garantida</h5>
 
-    <p class="indication-page"><u>Home</u></p>
-    <p>Bem vindo à LarDoceLar.</p>
+    <p id="text-home" class="indication-page" style="font-size: 30px ;"><u>Home</u></p>
+    <p id="text-home">Bem vindo à LarDoceLar.</p>
 
-    <p>
+    <p id="text-home">
         Com mais de cinco anos higienizando resid&ecirc;ncias
         da &aacute;rea metropolitana da cidade de S&atilde;o
         Paulo, a LarDoceLar estabeleceu uma
@@ -26,7 +26,7 @@
         qualidade e pre&ccedil;os acess&iacute;veis.
     </p>
 
-    <p>
+    <p id="text-home">
         Nossos servi&ccedil;os come&ccedil;am com um
         or&ccedil;amento para entender suas necessidades
         espec&iacute;ficas. Assim que finalizar o primeiro passo,
@@ -40,7 +40,7 @@
     <div class=" img-home-2">
         <img class="img-work" src="../../static/img/home-img.jpg" alt="">    
     </div>
-    <p>
+    <p id="text-home">
         Nosso trabalho promissor de excel&ecirc;ncia
         come&ccedil;a com profissionais cuidadosamente
         selecionados e treinados, que tem o compromisso de
@@ -61,7 +61,7 @@
         not&aacute;vel.
     </p>
 
-    <p style="text-align: center;">Para mais informações entre em <a href="">Contato</a></p>
+    <p id="text-home" style="text-align: center;">Para mais informações entre em <a href="/contato">Contato</a></p>
 
 </div>
 
