--- a/templates/master_layout/defaut.html
+++ b/templates/master_layout/defaut.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="../../static/css/default.css">
     <link rel="stylesheet" href="../../static/css/navbar.css">
     <link rel="stylesheet" href="../../static/css/home.css">
+    <link rel="stylesheet" href="../../static/css/contato.css">
+    <link rel="stylesheet" href="../../static/css/contratar_servicos.css">
+    
 </head>
 <body>
     <header  class="sticky-top jss5">
@@ -38,7 +41,7 @@
                     <ul class="navbar-nav" style="color:black;">              
       
                         <li class="nav-item nav-route" >
-                            <a class="nav-link" href="/home"><p > Home</p></a>
+                            <a class="nav-link" href="/"><p > Home</p></a>
                         </li>
       
                         <li class="nav-item nav-route" >
@@ -50,12 +53,9 @@
                         </li>
 
                         <li class="nav-item nav-route" >
-                            <a class="nav-link" href="/contratarservicos"><p > Contato</p></a>
+                            <a class="nav-link" href="/contato"><p > Seja um parceiro</p></a>
                         </li>
 
-                        <li class="nav-item nav-route" >
-                            <a class="nav-link" href="/contratarservicos"><p > Seja um parceiro</p></a>
-                        </li>
       
                       <!-- <li class="nav-item nav-route" style="margin-left: 60px; " >
                           <div class="botao-logout " >
