adicionado rotas de erro 404 e 500 / adicionado html sobre nós / ajustado layout da página home / adicionado Logo LarDoceLar

--- a/templates/contratar_servicos/contratar_servicos.html
+++ b/templates/contratar_servicos/contratar_servicos.html
@@ -1,10 +1,9 @@
 {% extends './master_layout/defaut.html' %}
 
-{% block body%}
-<div>
- <h1 style="color: white; text-align: center;"> Olá, procure aqui os servicos que deseja.</h1>
-</div>
+{% block subtitulo %} Contratar Serviços {% endblock%}
 
+
+{% block body%}
 <div class="container corpo">
   <!-- <h1>LarDoceLar</h1>
   <h5>Sua satisfação é garantida</h5> -->
