--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,4 +1,8 @@
-
+.img-logo-home{
+        height: 150px;
+        width: 350px;
+        object-fit: contain;   
+}
 
 .corpo{
     padding-top: 20px;
@@ -36,19 +40,19 @@
 .circle-home{
     z-index: -1;
     position: absolute;
-    border-radius: 50%;
     background-color: white;
     min-height: 220px;
     height: auto;
     min-width: 250px;
     width: auto;
     margin-left: 150px;
+    border-radius: 10px 30px;
     
 }
 
 .img-home{
     /* margin-top: 10px; */
-    border-radius: 50%;
+    border-radius: 10px 30px;
     margin: 20px;
     width: 20%;
     /* width: auto; */
@@ -59,7 +63,7 @@
 }
 
 .img-home-2{
-    border-radius: 50%;
+    border-radius: 10px 30px;
     margin: 20px;
     width: 20%;
     height: 220px;
@@ -70,9 +74,9 @@
 }
 
 .img-work {
-    border: 5px solid #B2DFEE;
     width: 100%;
     height: 220px;
-    border-radius: 50%;
+    border-radius: 10px 30px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
 }
