--- a/templates/contato/contato.html
+++ b/templates/contato/contato.html
@@ -1,11 +1,14 @@
 {% extends './master_layout/defaut.html' %}
 
+{% block subtitulo %} Contato {% endblock%}
+
+
 {% block body%}
 
 
     <!-- COLUNA TEXTO -->
     <div class="container corpo">
-        <p class="indication-page" style="text-align: center;"><u>Seja um parceiro</u></p>
+        <p class="indication-page"><u>Seja um parceiro</u></p>
         <div class="row  content-contato">
           <div class="col-sm">
             <p id="text-contato">
@@ -16,7 +19,7 @@
           <div class="col-sm div-forms-contato">
             <form>
                 <div class="form-group">
-                  <label for="exampleFormControlInput1">Business email</label>
+                  <label for="exampleFormControlInput1">Email Comercial</label>
                   <input type="email" class="form-control mt-2" id="exampleFormControlInput1" placeholder="name@example.com">
                 </div>
 
@@ -26,7 +29,7 @@
                 </div>
                 <div class="form-group row">
                     <div class="col-sm-10 mt-3">
-                        <button type="submit" class="btn btn-primary">Sign in</button>
+                        <button type="submit" class="btn btn-primary">Enviar</button>
                     </div>
                 </div>
               </form>
