--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,41 +1,36 @@
 {% extends './master_layout/defaut.html' %}
-<!-- <link rel="stylesheet" href="../../static/css/home.css"> -->
+
 {% block body %}
-
-<!-- <div class="circle-home">        <img class="img-work" src="../../static/img/home-img.jpg" alt="">    
-</div> -->
-
 
 <div class="container corpo">
     <div class="img-home">
-        <img class="img-work" src="../../static/img/home-img.jpg" alt="">    
+        <img class="img-work" src="../../static/img/work.jpg" alt="">    
     </div>
 
 
-    <h1>LarDoceLar</h1>
+    <div style="text-align: center;" class="div-logo">
+        <a  href="/">
+            <img class="img-logo-home" src="../../static/img/projeto-uni9.png">
+        </a>
+    </div>
     <h5>Sua satisfação é garantida</h5>
 
     <p id="text-home" class="indication-page" style="font-size: 30px ;"><u>Home</u></p>
     <p id="text-home">Bem vindo à LarDoceLar.</p>
 
     <p id="text-home">
-        Com mais de cinco anos higienizando resid&ecirc;ncias
+        Com mais de cinco anos oferencendo serviços resid&ecirc;ncias
         da &aacute;rea metropolitana da cidade de S&atilde;o
         Paulo, a LarDoceLar estabeleceu uma
         reputa&ccedil;&atilde;o de servi&ccedil;os de excelente
-        qualidade e pre&ccedil;os acess&iacute;veis.
+        qualidade prestado por nossos parceiros.
     </p>
 
     <p id="text-home">
-        Nossos servi&ccedil;os come&ccedil;am com um
-        or&ccedil;amento para entender suas necessidades
-        espec&iacute;ficas. Assim que finalizar o primeiro passo,
-        iniciaremos o agendamento do servi&ccedil;o de limpeza e
-        registraremos suas instru&ccedil;&otilde;es especiais.
-        Uma equipe qualificada chegar&aacute; &agrave; sua casa
-        com uma c&oacute;pia dessas instru&ccedil;&otilde;es,
-        juntamente com todos os produtos e equipamentos
-        necess&aacute;rios para fazer seu lar brilhar.
+        Para contratar nossos servi&ccedil;os basta acessar nossa aba de serviços e buscar pelo serviço que deseja
+        a partir dai você pode entrar em contato com algum parceiro que atenda suas necessidades
+        espec&iacute;ficas. Assim que finalizar esse processo,
+        você pode fazer toda a negociação e agendamento com o prestador de serviço de sua escolha.
     </p>
     <div class=" img-home-2">
         <img class="img-work" src="../../static/img/home-img.jpg" alt="">    
@@ -43,27 +38,37 @@
     <p id="text-home">
         Nosso trabalho promissor de excel&ecirc;ncia
         come&ccedil;a com profissionais cuidadosamente
-        selecionados e treinados, que tem o compromisso de
-        fornecer a voc&ecirc; um servi&ccedil;o de limpeza
-        excepcional. Nossa ampla experi&ecirc;ncia garante que
-        nossas equipes usem as t&eacute;cnicas mais eficazes
-        para cada trabalho de limpeza em sua casa. Cada uma
-        delas tem um L&iacute;der que &eacute;
-        respons&aacute;vel por verificar se todas as
-        &aacute;reas limpas da sua casa est&atilde;o
-        correctamente acabadas. Todas as equipes trabalham sob
+        selecionados, que tem o compromisso de
+        fornecer a voc&ecirc; um servi&ccedil;o
+        excepcional.<br>
+    
+        Todas as equipes trabalham sob
         um sistema de supervis&atilde;o que consiste em
         verifica&ccedil;&otilde;es de qualidade
         aleat&oacute;rias no local e comunica&ccedil;&atilde;o
-        constante com a gest&atilde;o. Encorajamos o feedback do
+        constante com a gest&atilde;o. <br>
+        
+        Encorajamos o feedback do
         cliente e trabalharemos com voc&ecirc; para encontrar
-        maneiras de tornar seu lar mais aconchegante e
-        not&aacute;vel.
+        maneiras de tornar nosso trabalho e sua satisfação cada vez melhor.
     </p>
 
-    <p id="text-home" style="text-align: center;">Para mais informações entre em <a href="/contato">Contato</a></p>
+    <p id="text-home" style="text-align: center;">Para ser um parceiro acesse: <a href="/contato">Seja um parceiro</a></p>
 
 </div>
+
+
+<footer>
+    <div id="copy-area" style="text-align: center; background-color:white;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12" style="text-align: center; background-color:white;">
+                    <p>Desenvolvido por <a href="/" target="_blank">LarDoceLar</a> &copy; 2014</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 {% endblock %}
 
