--- a/templates/master_layout/defaut.html
+++ b/templates/master_layout/defaut.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{% block subtitulo %} Home {% endblock%}</title>
 
     <!-- BOOTSTRAP CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -28,10 +28,12 @@
         <nav class="navbar navbar-expand-lg w-100 mx-auto d-flex align-items-center justify-content-between"
             style="background-color:white;font-size:20px; border-bottom: 1px solid #d8d8d8;">
             <div class="container-fluid  container-lista">
-              <!-- <a  href="/home">
-                  <img class="img-logo " src="../../static/img/keyrus-teamportal.svg">
-              </a>
-           -->
+                <div class="div-logo">
+                    <a  href="/">
+                        <img class="img-logo" src="../../static/img/projeto-uni9.png">
+                    </a>
+                </div>
+          
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +43,7 @@
                     <ul class="navbar-nav" style="color:black;">              
       
                         <li class="nav-item nav-route" >
-                            <a class="nav-link" href="/"><p > Home</p></a>
+                            <a class="nav-link" href="/"><p> Home</p></a>
                         </li>
       
                         <li class="nav-item nav-route" >
@@ -49,7 +51,7 @@
                         </li>
                             
                         <li class="nav-item nav-route" >
-                            <a class="nav-link" href="/contratarservicos"><p > Sobre nós</p></a>
+                            <a class="nav-link" href="/sobrenos"><p > Sobre nós</p></a>
                         </li>
 
                         <li class="nav-item nav-route" >
