alterado variavel de atividade da tabela para o modal

--- a/templates/contratar_servicos/contratar_servicos.html
+++ b/templates/contratar_servicos/contratar_servicos.html
@@ -19,7 +19,6 @@
             <tr>
               <th scope="col">Nome</th>
               <th scope="col">Tipo de Serviço</th>
-              <th scope="col">Atividades</th>
               <th scope="col">Valor Hora R$</th>
               <th scope="col">Contato</th>
             </tr>
@@ -30,7 +29,6 @@
             {% for servicos in servicos %}
               <th>{{servicos['name']}}</th>
               <th>{{servicos['title']}}</th>
-              <th>{{servicos['activities']}}</th>
               <th>{{servicos['hour_value']}}</th>
               <th><button type="button"class="btn btn-warning" data-toggle="modal" data-target="#modal.{{id_user_service}}">Entrar em Contato</button></th>
             {% endfor %}
@@ -45,7 +43,7 @@
 
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">{{servicos['name']}}</h5>
+        <h3 class="modal-title" id="exampleModalLongTitle">Contato de {{servicos['name']}}</h3>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -53,6 +51,7 @@
       <div class="modal-body">
         <p>Email: {{servicos['email']}}</p>
         <p>Telefone: {{servicos['telephone']}}</p>
+        <p>Atividades: <br>{{servicos['activities']}}</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
