--- a/templates/sobre_nos/sobre_nos.html
+++ b/templates/sobre_nos/sobre_nos.html
@@ -19,20 +19,20 @@
         vida.
     </p>
         
-    <p id="text-home">Depois de entender como esse tipo de servi&ccedil;
-        fazia sucesso em outros pa&iacute;, decidi dar
-        in&iacute; a LarDoceLar. Acredito que todos n&oacute;s
+    <p id="text-home">Depois de entender como esse tipo de serviço
+        fazia sucesso em outros países;, decidimos dar
+        início; a LarDoceLar. Acredito que todos nós
         merecemos a oportunidade de crescer tanto pessoal quanto
-        financeiramente. E levamos muito a s&eacute;rio o apoio
-        a todos os que trabalham na LarDoceLar. &Eacute; a coisa
-        certa a fazer e faz sentido para nós. &Eacute; claro que se
-        n&atilde;o continuamos a melhorar nossas
-        opera&ccedil;&otilde;es continuamente quer seja
-        atrav&eacute;s do uso de tecnologia de
-        informa&ccedil;&otilde;es, ou com o uso dos mais
-        modernos modos de disponibilizar serviços, n&oacute;s
-        nos esfor&ccedil;amos para oferecer a ti o melhor
-        servi&ccedil;o.
+        financeiramente. E levamos muito a sério o apoio
+        a todos os que trabalham na LarDoceLar. É a coisa
+        certa a fazer e faz sentido para nós. É claro que se
+        não continuamos a melhorar nossas
+        operações continuamente quer seja
+        através do uso de tecnologia de
+        informações, ou com o uso dos mais
+        modernos modos de disponibilizar serviços, nós
+        nos esforçamos para oferecer a ti o melhor
+        serviço.
     </p>
 
     <div style="text-align: center;" class="div-logo">
